# lizard-lang

./: CMakeLists.txt  README.md
include/: ast.h  environment.h  error_handler.h  eval_arithmetic.h  evaluator.h  lexer.h  lexer_arithmetic.h  lexer_identifier.h  lexer_keywords.h  lexer_number.h  lexer_state.h  lexer_string.h  parser.h  parser_arithmetic.h  token.h  value.h
src/: main.cpp
src/error/: error_handler.cpp
src/evaluator/: eval_arithmetic.cpp  eval_print.cpp  eval_variable.cpp  evaluator.cpp
src/lexer/: lexer.cpp  lexer_arithmetic.cpp  lexer_identifier.cpp  lexer_keywords.cpp  lexer_number.cpp  lexer_state.cpp  lexer_string.cpp
src/parser/: parser.cpp  parser_arithmetic.cpp  parser_print.cpp  parser_variable.cpp
src/types/: environment.cpp  value.cpp
tests/stage0/: arithmetic_test.lz  hello_world.lz  multiline_str.lz
